Fix for footer font sizes and sollicitatie alignment text

--- a/contents/assets/css/style.css
+++ b/contents/assets/css/style.css
@@ -524,6 +524,9 @@ footer {
   padding-top: 100px;
   padding-bottom: 60px;
 }
+footer p {
+  font-size: 1em;
+}
 footer a, footer p, footer h6 {
   color: white;
 }
